# vml

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  Doxygen.in  LICENSE  README.md  default.profraw
include/: aabb.hpp  axis_angle.hpp  bounding_volume.hpp  eular_angles.hpp  euler_angles.hpp  frustum.hpp  intersect.hpp  irect.hpp  ivec2.hpp  ivec3.hpp  ivec4.hpp  mat3.hpp  mat4.hpp  mat_base.hpp  multi_dim.hpp  plane.hpp  polar_coord.hpp  quad.hpp  quat.hpp  real.hpp  rect.hpp  sphere.hpp  transform.hpp  vec2.hpp  vec3.hpp  vec3a.hpp  vec4.hpp  vec_base.hpp  vml-impl.hpp  vml.hpp  vml_fcn.hpp
include/detail/: avx_mathfun.h  deduced_types.hpp  sse_mathfun.h  types.hpp  types_sse.hpp  vml_commons.hpp
include/impl/: intersect.hpp
src/: intersect.cpp
unit_tests/: CMakeLists.txt  all_tests.cpp  coverage.bat  coverage.sh
unit_tests/validity/: aabb.cpp  axis_angle.cpp  bounding_volume.cpp  euler_angles.cpp  frustum.cpp  intersect.cpp  main.cpp  mat3.cpp  mat4.cpp  plane.cpp  quad.cpp  quat.cpp  transform.cpp  vec.cpp
